# cc-blog

./: .env.example  .env_bak  .gitignore  API_TESTS.md  Cargo.toml  Dockerfile  README.md  api_examples.http  docker-compose.yml  init.sql  nginx.conf  schema.sql  start-docker.sh  start.sh  test_api.sh
migrations/: 001_create_users.sql  002_create_articles.sql  002_create_messages.sql  init.sql
src/: auth.rs  db.rs  main.rs  models.rs  routes.rs
src/auth/: jwt.rs
src/config/: mod.rs
src/database/: connection.rs  message.rs  mod.rs  user.rs
src/db/: mod.rs
src/errors/: mod.rs
src/handlers/: article.rs  auth.rs  contract_handler.rs  message.rs  mod.rs  post_handler.rs  transfer_handler.rs  user.rs  user_handler.rs  wallet_handler.rs
src/middleware/: auth.rs  jwt.rs  mod.rs
src/models/: article.rs  message.rs  mod.rs  user.rs
src/utils/: auth.rs  error.rs  errors.rs  jwt.rs  mod.rs
tests/: api_test.rs  api_tests.rs
